[package]
name = "awecut"
authors = ["FuseTim"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
clap = { version = "4.3.23", features = ["derive"] }
env_logger = "0.10.0"
futures-util = "0.3.28"
indicatif = "0.17.6"
log = "0.4.20"
rusty-chromaprint = "0.1.3"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = [ "full" ] }
